jdk兼容性更新，设计模式添加