@@ -1,8 +1,9 @@
 package kitchen.order.merchname;
+import java.util.Collections;
 import java.util.List;
 //单品鸡蛋汤
 public class EggSoup implements MerchName {
-    public final static List<String> names=List.of("鸡蛋汤");
+    public final static List<String> names= Collections.singletonList("鸡蛋汤");
     // public final static List<MerchName> merchs;
 
     // public EggSoup() {
